@@ -13,12 +13,16 @@ import java.util.Iterator;
 import java.util.List;
 
 import org.eclipse.core.runtime.Assert;
+import org.eclipse.core.runtime.IStatus;
+import org.eclipse.core.runtime.Status;
+import org.eclipse.debug.core.ILaunchConfiguration;
 import org.eclipse.debug.core.ILaunchManager;
 import org.eclipse.debug.ui.IDebugUIConstants;
 import org.eclipse.jface.action.IAction;
 import org.eclipse.jface.action.IMenuManager;
 import org.eclipse.jface.action.IToolBarManager;
 import org.eclipse.jface.action.Separator;
+import org.eclipse.jface.dialogs.ErrorDialog;
 import org.eclipse.jface.preference.IPreferenceStore;
 import org.eclipse.jface.resource.JFaceColors;
 import org.eclipse.jface.resource.JFaceResources;
@@ -31,6 +35,7 @@ import org.eclipse.swt.SWT;
 import org.eclipse.swt.custom.SashForm;
 import org.eclipse.swt.custom.StyleRange;
 import org.eclipse.swt.custom.StyledText;
+import org.eclipse.swt.dnd.DND;
 import org.eclipse.swt.events.KeyAdapter;
 import org.eclipse.swt.events.KeyEvent;
 import org.eclipse.swt.events.MouseAdapter;
@@ -55,13 +60,16 @@ import org.eclipse.ui.console.IHyperlink;
 import org.python.pydev.core.log.Log;
 import org.python.pydev.debug.core.PydevDebugPlugin;
 import org.python.pydev.debug.newconsole.prefs.ColorManager;
+import org.python.pydev.debug.pyunit.PyUnitViewTestsHolder.DummyPyUnitServer;
 import org.python.pydev.debug.ui.ILinkContainer;
 import org.python.pydev.debug.ui.PythonConsoleLineTracker;
+import org.python.pydev.plugin.PyDevUiPrefs;
 import org.python.pydev.plugin.PydevPlugin;
-import org.python.pydev.plugin.preferences.PydevPrefs;
 import org.python.pydev.shared_core.SharedCorePlugin;
 import org.python.pydev.shared_core.callbacks.ICallbackWithListeners;
 import org.python.pydev.shared_core.string.FastStringBuffer;
+import org.python.pydev.shared_interactive_console.console.ui.internal.ClipboardHandler;
+import org.python.pydev.shared_ui.EditorUtils;
 import org.python.pydev.shared_ui.tooltips.presenter.StyleRangeWithCustomData;
 import org.python.pydev.shared_ui.tooltips.presenter.ToolTipPresenterHandler;
 import org.python.pydev.shared_ui.utils.IViewWithControls;
@@ -73,9 +81,9 @@ import org.python.pydev.ui.ViewPartWithOrientation;
 
 /**
  * ViewPart that'll listen to the PyUnitServer and show what's happening (with a green/red bar).
- * 
+ *
  * Features:
- * 
+ *
  * - Red/green bar -- OK
  * - Relaunching the tests -- OK
  * - Relaunching only the tests that failed -- OK
@@ -97,27 +105,27 @@ import org.python.pydev.ui.ViewPartWithOrientation;
  * - Show current test(s) being run (handle parallel execution) -- OK
  * - Select some tests and make a new run with them. -- OK
  * - Show total time to run tests. -- OK
- * - Rerun tests on file changes -- OK 
- * 
- * 
+ * - Rerun tests on file changes -- OK
+ *
+ *
  * Nice to have:
- * - Hide or show output pane 
+ * - Hide or show output pane
  * - If a string was different, show an improved diff (as JDT)
  * - Save column order (tree.setColumnOrder(order))
  * - Hide columns
  * - Theming bug: when columns order change, the selected text for the last columns is not appearing
- * 
- * 
+ *
+ *
  * References:
- * 
+ *
  * http://www.eclipse.org/swt/snippets/
- * 
+ *
  * Notes on tree/table: http://www.eclipse.org/swt/R3_2/new_and_noteworthy.html (see links below)
- * 
+ *
  * Working: Sort table by column (applicable to tree: http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.swt.snippets/src/org/eclipse/swt/snippets/Snippet2.java?view=markup&content-type=text%2Fvnd.viewcvs-markup&revision=HEAD )
  * Working: Reorder columns by drag ( http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.swt.snippets/src/org/eclipse/swt/snippets/Snippet193.java?view=markup&content-type=text%2Fvnd.viewcvs-markup&revision=HEAD )
  * Working: Sort indicator in column header ( http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.swt.snippets/src/org/eclipse/swt/snippets/Snippet192.java?view=markup&content-type=text%2Fvnd.viewcvs-markup&revision=HEAD )
- * 
+ *
  * Based on org.eclipse.jdt.internal.junit.ui.TestRunnerViewPart (but it's really not meant to be reused)
  */
 @SuppressWarnings({ "rawtypes", "unchecked" })
@@ -141,14 +149,54 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
     public static final String PYUNIT_VIEW_BACKGROUND_RELAUNCH_SHOW_ONLY_ERRORS = "PYUNIT_VIEW_BACKGROUND_RELAUNCH_SHOW_ONLY_ERRORS";
     public static final boolean PYUNIT_VIEW_DEFAULT_BACKGROUND_RELAUNCH_SHOW_ONLY_ERRORS = false;
 
-    public static int MAX_RUNS_TO_KEEP = 15;
-
-    private static final Object lockServerListeners = new Object();
-    private static final List<PyUnitViewServerListener> serverListeners = new ArrayList<PyUnitViewServerListener>();
+    public static int MAX_RUNS_TO_KEEP = PyUnitViewTestsHolder.MAX_RUNS_TO_KEEP;
 
     private PyUnitTestRun currentRun;
-    private final PythonConsoleLineTracker lineTracker = new PythonConsoleLineTracker();
     private final ActivateLinkmouseListener activateLinkmouseListener = new ActivateLinkmouseListener();
+
+    private ILinkContainer iLinkContainer = new ILinkContainer() {
+
+        @Override
+        public void addLink(IHyperlink link, int offset, int length) {
+            if (testOutputText == null) {
+                return;
+            }
+            StyleRangeWithCustomData range = new StyleRangeWithCustomData();
+            range.underline = true;
+            try {
+                range.underlineStyle = SWT.UNDERLINE_LINK;
+            } catch (Throwable e) {
+                //Ignore (not available on earlier versions of eclipse)
+            }
+
+            //Set the proper color if it's available.
+            TextAttribute textAttribute = ColorManager.getDefault().getHyperlinkTextAttribute();
+            if (textAttribute != null) {
+                range.foreground = textAttribute.getForeground();
+            } else {
+                range.foreground = JFaceColors.getHyperlinkText(Display.getDefault());
+            }
+            range.start = offset;
+            range.length = length + 1;
+            range.customData = link;
+            testOutputText.setStyleRange(range);
+        }
+
+        @Override
+        public String getContents(int lineOffset, int lineLength) throws BadLocationException {
+            if (testOutputText == null) {
+                return "";
+            }
+            if (lineLength <= 0) {
+                return "";
+            }
+            try {
+                return testOutputText.getText(lineOffset, lineOffset + lineLength);
+            } catch (IllegalArgumentException e) {
+                return ""; //thrown on invalid range.
+            }
+        }
+    };
 
     /*default*/static final int COL_INDEX = 0;
     /*default*/static final int COL_RESULT = 1;
@@ -157,10 +205,6 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
     /*default*/static final int COL_TIME = 4;
     /*default*/static final int NUMBER_OF_COLUMNS = 5;
     private static final NumberFormatException NUMBER_FORMAT_EXCEPTION = new NumberFormatException();
-
-    /*default*/PythonConsoleLineTracker getLineTracker() {
-        return lineTracker;
-    }
 
     private ColorAndStyleCache colorAndStyleCache;
 
@@ -172,6 +216,8 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
     private Label fStatus;
     private Composite fCounterComposite;
     private IPropertyChangeListener prefListener;
+
+    private PinHistoryAction fPinHistory = new PinHistoryAction(this);
 
     /**
      * Whether we should show only errors or not.
@@ -190,6 +236,7 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
     private boolean disposed = false;
 
     public PyUnitView() {
+        this.currentRun = PyUnitViewTestsHolder.getCurrentTest();
         if (SharedCorePlugin.inTestMode()) {
             // leave showOnlyErrors at default under test
         } else {
@@ -199,48 +246,6 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
         }
 
         NotifyViewCreated.notifyViewCreated(this);
-
-        lineTracker.init(new ILinkContainer() {
-
-            public void addLink(IHyperlink link, int offset, int length) {
-                if (testOutputText == null) {
-                    return;
-                }
-                StyleRangeWithCustomData range = new StyleRangeWithCustomData();
-                range.underline = true;
-                try {
-                    range.underlineStyle = SWT.UNDERLINE_LINK;
-                } catch (Throwable e) {
-                    //Ignore (not available on earlier versions of eclipse)
-                }
-
-                //Set the proper color if it's available.
-                TextAttribute textAttribute = ColorManager.getDefault().getHyperlinkTextAttribute();
-                if (textAttribute != null) {
-                    range.foreground = textAttribute.getForeground();
-                } else {
-                    range.foreground = JFaceColors.getHyperlinkText(Display.getDefault());
-                }
-                range.start = offset;
-                range.length = length + 1;
-                range.customData = link;
-                testOutputText.setStyleRange(range);
-            }
-
-            public String getContents(int lineOffset, int lineLength) throws BadLocationException {
-                if (testOutputText == null) {
-                    return "";
-                }
-                if (lineLength <= 0) {
-                    return "";
-                }
-                try {
-                    return testOutputText.getText(lineOffset, lineOffset + lineLength);
-                } catch (IllegalArgumentException e) {
-                    return ""; //thrown on invalid range.
-                }
-            }
-        });
     }
 
     public PyUnitProgressBar getProgressBar() {
@@ -335,9 +340,10 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
         tree.setMenu(menu);
 
         if (PydevPlugin.getDefault() != null) {
-            colorAndStyleCache = new ColorAndStyleCache(PydevPrefs.getChainedPrefStore());
+            colorAndStyleCache = new ColorAndStyleCache(PyDevUiPrefs.getChainedPrefStore());
             prefListener = new IPropertyChangeListener() {
 
+                @Override
                 public void propertyChange(PropertyChangeEvent event) {
                     if (tree != null) {
                         String property = event.getProperty();
@@ -367,7 +373,7 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
                     }
                 }
             };
-            PydevPrefs.getChainedPrefStore().addPropertyChangeListener(prefListener);
+            PyDevUiPrefs.getChainedPrefStore().addPropertyChangeListener(prefListener);
         }
 
         StyledText text = new StyledText(sash, SWT.MULTI | SWT.H_SCROLL | SWT.V_SCROLL | SWT.READ_ONLY);
@@ -400,9 +406,8 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
 
         toolBar.add(new Separator());
         toolBar.add(new HistoryAction(this));
-        PinHistoryAction pinHistory = new PinHistoryAction(this);
-        toolBar.add(pinHistory);
-        toolBar.add(new RestorePinHistoryAction(this, pinHistory));
+        toolBar.add(fPinHistory);
+        toolBar.add(new RestorePinHistoryAction(this));
 
         addOrientationPreferences(menuManager);
     }
@@ -463,7 +468,7 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
             this.fCounterPanel = null;
         }
         if (this.prefListener != null) {
-            PydevPrefs.getChainedPrefStore().removePropertyChangeListener(prefListener);
+            PyDevUiPrefs.getChainedPrefStore().removePropertyChangeListener(prefListener);
             this.prefListener = null;
         }
         super.dispose();
@@ -481,9 +486,10 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
         //We create a listener before and later set the view so that we don't run into racing condition errors!
         final PyUnitViewServerListener serverListener = new PyUnitViewServerListener(pyUnitServer,
                 pyUnitServer.getPyUnitLaunch());
-        PyUnitView.addServerListener(serverListener);
+        PyUnitViewTestsHolder.addServerListener(serverListener);
 
         Runnable r = new Runnable() {
+            @Override
             public void run() {
                 try {
                     PyUnitView view = getView();
@@ -509,13 +515,13 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
      * as it may be that a view was closed and then a new one created).
      */
     private void onTestRunAdded() {
-        synchronized (lockServerListeners) {
-            for (PyUnitViewServerListener listener : serverListeners) {
+        synchronized (PyUnitViewTestsHolder.lockServerListeners) {
+            for (PyUnitViewServerListener listener : PyUnitViewTestsHolder.serverListeners) {
                 listener.setView(this); //Set in all, as it may be that they have an already disposed view registered.
             }
-            if (serverListeners.size() > 0) {
+            if (PyUnitViewTestsHolder.serverListeners.size() > 0) {
                 //make the last one active.
-                this.setCurrentRun(serverListeners.get(serverListeners.size() - 1).getTestRun());
+                this.setCurrentRun(PyUnitViewTestsHolder.serverListeners.getLast().getTestRun());
             }
         }
     }
@@ -523,25 +529,11 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
     /**
      * Gets the py unit view. May only be called in the UI thread. If the view is not visible, shows it if the
      * preference to do that is set to true.
-     * 
+     *
      * Note that it may return null if the preference to show it is false and the view is not currently shown.
      */
     public static PyUnitView getView() {
         return (PyUnitView) UIUtils.getView(PY_UNIT_VIEW_ID, ShowViewOnTestRunAction.getShowViewOnTestRun());
-    }
-
-    /**
-     * Adds a server listener to the static list of available server listeners. This is needed so that we start
-     * to listen to it when the view is restored later on (if it's still not visible).
-     */
-    protected static void addServerListener(PyUnitViewServerListener serverListener) {
-        synchronized (lockServerListeners) {
-
-            if (serverListeners.size() + 1 > MAX_RUNS_TO_KEEP) {
-                serverListeners.remove(0);
-            }
-            serverListeners.add(serverListener);
-        }
     }
 
     /**
@@ -550,6 +542,11 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
     /*default */void notifyFinished(PyUnitTestRun testRun) {
         if (this.disposed) {
             return;
+        }
+
+        // When a test finishes executing, save the configuration
+        if (testRun.savedDiskIndex == null) {
+            PyUnitViewTestsHolder.saveDiskIndexJob.schedule(20);
         }
 
         if (testRun != currentRun) {
@@ -582,7 +579,7 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
     }
 
     /**
-     * Used to update the number of tests available. 
+     * Used to update the number of tests available.
      */
     /*default*/void notifyTestsCollected(PyUnitTestRun testRun) {
         if (this.disposed) {
@@ -601,6 +598,7 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
     public void asyncUpdateCountersAndBar() {
         RunInUiThread.async(new Runnable() {
 
+            @Override
             public void run() {
                 updateCountersAndBar();
             }
@@ -750,7 +748,7 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
 
     /**
      * Helper method to reset the bar to a state knowing only about if we have errors, runs and whether it's finished.
-     * 
+     *
      * Only really used if we have no errors or if we don't know how to collect the current number of test runs.
      */
     private void setShowBarWithError(boolean hasError, boolean hasRuns, boolean finished) {
@@ -777,6 +775,7 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
     private final FastStringBuffer tempOnSelectResult = new FastStringBuffer();
     private final String ERRORS_HEADER = "============================= ERRORS =============================\n";
     private final String CAPTURED_OUTPUT_HEADER = "======================== CAPTURED OUTPUT =========================\n";
+    private boolean onlyCreateLinksForExistingFiles = true;
 
     /**
      * Called when a test is selected in the tree (shows its results in the text output text component).
@@ -804,7 +803,7 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
         String string = tempOnSelectResult.toString();
         testOutputText.setFont(JFaceResources.getFont(IDebugUIConstants.PREF_CONSOLE_FONT));
 
-        testOutputText.setText(string);
+        testOutputText.setText(string + "\n\n\n"); // Add a few lines to the test output so that we can scroll a bit more.
         testOutputText.setStyleRange(new StyleRange());
 
         if (addedErrors) {
@@ -819,6 +818,18 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
             testOutputText.setStyleRange(range);
         }
 
+        PythonConsoleLineTracker lineTracker = new PythonConsoleLineTracker();
+
+        ILaunchConfiguration launchConfiguration = null;
+        PyUnitTestRun testRun = result.getTestRun();
+        if (testRun != null) {
+            IPyUnitLaunch pyUnitLaunch = testRun.getPyUnitLaunch();
+            if (pyUnitLaunch != null) {
+                launchConfiguration = pyUnitLaunch.getLaunchConfiguration();
+            }
+        }
+        lineTracker.init(launchConfiguration, iLinkContainer);
+        lineTracker.setOnlyCreateLinksForExistingFiles(this.onlyCreateLinksForExistingFiles);
         lineTracker.splitInLinesAndAppendToLineTracker(string);
     }
 
@@ -914,12 +925,13 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
 
     /**
      * Sets the current run (updates the UI)
-     * 
+     *
      * Note that it can be called to update the current test run when changing whether only errors should be
      * shown or not (so, we don't check if it's the current or not, just go on and update all).
      */
     public void setCurrentRun(PyUnitTestRun testRun) {
         this.currentRun = testRun;
+        PyUnitViewTestsHolder.setCurrentTest(testRun);
         tree.setRedraw(false);
         try {
             tree.removeAll();
@@ -940,9 +952,9 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
      * @return returns a copy with the test runs available.
      */
     public List<PyUnitTestRun> getAllTestRuns() {
-        synchronized (lockServerListeners) {
+        synchronized (PyUnitViewTestsHolder.lockServerListeners) {
             ArrayList<PyUnitTestRun> ret = new ArrayList<PyUnitTestRun>();
-            for (PyUnitViewServerListener listener : serverListeners) {
+            for (PyUnitViewServerListener listener : PyUnitViewTestsHolder.serverListeners) {
                 ret.add(listener.getTestRun());
             }
             return ret;
@@ -962,10 +974,11 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
      * Removes all the terminated test runs.
      */
     public void clearAllTerminated() {
-        synchronized (lockServerListeners) {
+        synchronized (PyUnitViewTestsHolder.lockServerListeners) {
             boolean removedCurrent = false;
 
-            for (Iterator<PyUnitViewServerListener> it = serverListeners.iterator(); it.hasNext();) {
+            for (Iterator<PyUnitViewServerListener> it = PyUnitViewTestsHolder.serverListeners.iterator(); it
+                    .hasNext();) {
                 PyUnitTestRun next = it.next().getTestRun();
                 if (next.getFinished()) {
                     if (next == this.currentRun) {
@@ -975,8 +988,8 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
                 }
             }
             if (removedCurrent) {
-                if (serverListeners.size() > 0) {
-                    this.setCurrentRun(serverListeners.get(0).getTestRun());
+                if (PyUnitViewTestsHolder.serverListeners.size() > 0) {
+                    this.setCurrentRun(PyUnitViewTestsHolder.serverListeners.getFirst().getTestRun());
                 } else {
                     this.setCurrentRun(null);
                 }
@@ -993,12 +1006,48 @@ public class PyUnitView extends ViewPartWithOrientation implements IViewWithCont
         text.addMouseListener(this.activateLinkmouseListener);
     }
 
+    @Override
     public ICallbackWithListeners getOnControlCreated() {
         return onControlCreated;
     }
 
+    @Override
     public ICallbackWithListeners getOnControlDisposed() {
         return onControlDisposed;
+    }
+
+    public void exportCurrentToClipboard() {
+        PyUnitTestRun curr = this.currentRun;
+        if (curr == null) {
+            return;
+        }
+
+        String str = curr.toXML();
+        if (str.length() > 0) {
+            new ClipboardHandler().putIntoClipboard(DND.CLIPBOARD, Display.getCurrent(), str);
+        }
+    }
+
+    public void restoreFromClipboard() {
+        try {
+            String clipboardContents = ClipboardHandler.getClipboardContents();
+            PyUnitTestRun testRunRestored = PyUnitTestRun.fromXML(clipboardContents);
+            DummyPyUnitServer pyUnitServer = new DummyPyUnitServer(testRunRestored.getPyUnitLaunch());
+
+            final PyUnitViewServerListener serverListener = new PyUnitViewServerListener(pyUnitServer, testRunRestored);
+            PyUnitViewTestsHolder.addServerListener(serverListener);
+
+            this.setCurrentRun(testRunRestored);
+        } catch (Exception e) {
+            Log.log(e);
+            Status status = SharedCorePlugin.makeStatus(IStatus.ERROR, e.getMessage(), e);
+            ErrorDialog.openError(EditorUtils.getShell(), "Error restoring tests from clipboard",
+                    "Error restoring tests from clipboard", status);
+        }
+    }
+
+    public void setOnlyCreateLinksForExistingFiles(boolean b) {
+        this.onlyCreateLinksForExistingFiles = b;
     }
 
 }
